--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/stack": "^7.4.2",
+    "@supabase/supabase-js": "^2.50.2",
     "expo": "~53.0.12",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
